@@ -1,5 +1,8 @@
 * V1.9.9.1
-  * started new version
+  * added support for setuptools
+  * added report on Python executable used by CK
+  * recording python executable to ck-python.cfg during installation -
+    it can now be used by default when calling CK CLI
 
 * V1.9.9
   * fixed installation bug (non UTF-8 character)
